<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_height="200dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:layout_weight="4">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_category_dialog_label_create_category"
                android:textColor="@color/black"
                android:fontFamily="@string/font_family_condensed"
                android:textStyle="bold"
                android:padding="5dp"
                android:id="@+id/activity_main_category_dialog_label_dialog"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="?actionBarSize"
                android:layout_below="@id/activity_main_category_dialog_label_dialog"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/black"
                android:padding="5dp"
                android:id="@+id/activity_main_category_dialog_label_name"
                android:text="@string/activity_main_category_dialog_label_name"/>

            <EditText
                android:layout_width="match_parent"
                android:padding="5dp"
                android:labelFor="@id/activity_main_category_dialog_label_name"
                android:inputType="text"
                android:background="@drawable/activity_main_category_dialog_custom_editext"
                android:layout_toEndOf="@id/activity_main_category_dialog_label_name"
                android:layout_below="@id/activity_main_category_dialog_label_dialog"
                android:id="@+id/activity_main_category_dialog_category_name"
                android:hint="@string/activity_main_category_dialog_hint_name"
                android:textColor="@color/black"
                android:layout_height="?actionBarSize"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="?actionBarSize"
                android:layout_below="@id/activity_main_category_dialog_label_name"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/black"
                android:padding="5dp"
                android:id="@+id/activity_main_category_dialog_label_store"
                android:text="@string/activity_main_category_dialog_label_store"/>

            <android.support.v7.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="?actionBarSize"
                android:padding="5dp"
                android:id="@+id/activity_main_category_dialog_show_store"
                android:layout_below="@id/activity_main_category_dialog_label_name"
                android:layout_toEndOf="@id/activity_main_category_dialog_label_store"/>



        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/transparent_white"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/activity_main_category_dialog_button_cancel"
                android:id="@+id/activity_main_category_dialog_button_cancel"
                android:gravity="center"
                android:textColor="@color/black"
                android:fontFamily="@string/font_family_condensed"
                android:textSize="18sp"
                android:background="@drawable/ripple_effect"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/tiffany_blue"
                android:text="@string/activity_main_category_dialog_button_confirm"
                android:id="@+id/activity_main_category_dialog_button_confirm"
                android:gravity="center"
                android:textColor="@color/white"
                android:fontFamily="@string/font_family_condensed"
                android:textSize="18sp"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
