<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/transparent_black"
    android:gravity="center"
    android:orientation="horizontal"
    android:layout_height="match_parent">

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="0dp"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="2.5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:text="@string/activity_main_category_long_click_dialog_label_select"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@string/font_family_condensed"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/activity_main_sub_category_long_click_label"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/default_background"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:text="@string/activity_main_category_long_click_dialog_label_edit"
            android:gravity="center|start"
            android:textColor="@color/black"
            android:fontFamily="@string/font_family_condensed"
            android:textSize="18sp"
            android:padding="10dp"
            android:id="@+id/activity_main_sub_category_long_click_dialog_edit"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/default_background"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:text="@string/activity_main_category_long_click_dialog_label_delete"
            android:padding="10dp"
            android:gravity="center|start"
            android:textColor="@color/black"
            android:fontFamily="@string/font_family_condensed"
            android:textSize="18sp"
            android:id="@+id/activity_main_sub_category_long_click_dialog_delete"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/default_background"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:text="@string/activity_main_category_long_click_dialog_cancel"
            android:padding="10dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@string/font_family_condensed"
            android:textSize="18sp"
            android:textStyle="bold"
            android:id="@+id/activity_main_sub_category_long_click_dialog_cancel"/>

    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"/>


</LinearLayout>
