<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/transparent_black"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:id="@+id/activity_main_sub_category_dialog_main_layout"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="3.5"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_category_dialog_label_create_sub_category"
                android:textColor="@color/black"
                android:fontFamily="@string/font_family_condensed"
                android:textStyle="bold"
                android:padding="5dp"
                android:id="@+id/activity_main_sub_category_dialog_label_dialog"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:id="@+id/activity_main_sub_category_dialog_sub_category_name_layout"
                android:layout_below="@id/activity_main_sub_category_dialog_label_dialog"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:gravity="center|start"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    android:id="@+id/activity_main_sub_category_dialog_label_name"
                    android:text="@string/activity_main_category_dialog_label_name"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:padding="5dp"
                    android:labelFor="@id/activity_main_category_dialog_label_name"
                    android:inputType="text"
                    android:background="@drawable/activity_main_category_dialog_custom_editext"
                    android:id="@+id/activity_main_sub_category_dialog_sub_category_name"
                    android:hint="@string/activity_main_category_dialog_hint_name"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_marginTop="10dp"
                android:id="@+id/activity_main_sub_category_dialog_sub_category_price_layout"
                android:layout_below="@id/activity_main_sub_category_dialog_sub_category_name_layout"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:gravity="center|start"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    android:id="@+id/activity_main_sub_category_dialog_label_price"
                    android:text="@string/activity_main_sub_category_dialog_label_price"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:padding="5dp"
                    android:labelFor="@id/activity_main_category_dialog_label_name"
                    android:inputType="numberDecimal"
                    android:background="@drawable/activity_main_category_dialog_custom_editext"
                    android:id="@+id/activity_main_sub_category_dialog_price"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_marginTop="10dp"
                android:id="@+id/activity_main_sub_category_dialog_sub_category_quantity_layout"
                android:layout_below="@id/activity_main_sub_category_dialog_sub_category_price_layout"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:gravity="center|start"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    android:id="@+id/activity_main_sub_category_dialog_label_quantity"
                    android:text="@string/activity_main_sub_category_dialog_label_quantity"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:padding="5dp"
                    android:labelFor="@id/activity_main_category_dialog_label_name"
                    android:inputType="number"
                    android:background="@drawable/activity_main_category_dialog_custom_editext"
                    android:id="@+id/activity_main_sub_category_dialog_quantity"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_marginTop="10dp"
                android:id="@+id/activity_main_sub_category_dialog_sub_category_type_layout"
                android:layout_below="@id/activity_main_sub_category_dialog_sub_category_quantity_layout"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:gravity="center|start"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    android:id="@+id/activity_main_sub_category_dialog_label_type"
                    android:text="@string/activity_main_sub_category_dialog_label_type"/>

                <android.support.v7.widget.AppCompatSpinner
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@drawable/custom_spinner"
                    android:labelFor="@id/activity_main_category_dialog_label_name"
                    android:id="@+id/activity_main_sub_category_dialog_type"
                    android:textColor="@color/black" />

            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/transparent_white"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/activity_main_sub_category_dialog_button_layout"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/activity_main_category_dialog_button_cancel"
                android:id="@+id/activity_main_sub_category_dialog_button_cancel"
                android:gravity="center"
                android:textColor="@color/black"
                android:fontFamily="@string/font_family_condensed"
                android:textSize="18sp"
                android:background="@drawable/ripple_effect" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/activity_main_category_dialog_button_confirm"
                android:id="@+id/activity_main_sub_category_dialog_button_confirm"
                android:gravity="center"
                android:background="@drawable/ripple_effect"
                android:textColor="@color/tiffany_blue"
                android:fontFamily="@string/font_family_condensed"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button_with_color_tifany_blue_and_ripple_effect"
                android:text="@string/activity_main_category_dialog_button_add_new"
                android:id="@+id/activity_main_sub_category_dialog_button_add_new"
                android:gravity="center"
                android:textColor="@color/white"
                android:fontFamily="@string/font_family_condensed"
                android:textSize="18sp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
